<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

<!--        <androidx.constraintlayout.widget.ConstraintLayout-->
<!--            android:id="@+id/app_bar"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:padding="20dp"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent">-->

<!--            <ImageView-->
<!--                android:id="@+id/icon_back"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:src="@drawable/back"-->
<!--                app:layout_constraintBottom_toBottomOf="@id/appbar_txt"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toTopOf="parent" />-->

<!--            <TextView-->
<!--                android:id="@+id/appbar_txt"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginStart="10dp"-->
<!--                android:fontFamily="@font/roboto_bold"-->
<!--                android:textColor="@color/main_blue"-->
<!--                android:textSize="25sp"-->
<!--                app:layout_constraintStart_toEndOf="@+id/icon_back"-->
<!--                app:layout_constraintTop_toTopOf="parent"-->
<!--                tools:text="Детали о товаре" />-->

<!--        </androidx.constraintlayout.widget.ConstraintLayout>-->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="16dp"
            tools:context=".presentation.AddFragment">

            <ImageView
                android:id="@+id/product_img"
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:layout_marginTop="40dp"
                android:contentDescription="@string/product_image"
                android:src="@drawable/image_null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/product_name"
                style="@style/product_fields"
                android:layout_marginTop="32dp"
                android:text="@string/name_product"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/product_img" />

            <EditText
                android:id="@+id/product_name_edit"
                style="@style/fields_input_style"
                android:hint="@string/write_name"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/product_name" />

            <TextView
                android:id="@+id/product_price"
                style="@style/product_fields"
                android:text="@string/product_price"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/product_name_edit" />

            <EditText
                android:id="@+id/product_price_edit"
                style="@style/fields_input_style"
                android:hint="@string/write_product_price"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/product_price" />

            <TextView
                android:id="@+id/product_fabric"
                style="@style/product_fields"
                android:text="@string/product_fabric"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/product_price_edit" />

            <EditText
                android:id="@+id/product_fabric_edit"
                style="@style/fields_input_style"
                android:hint="@string/write_product_fabric"
                android:importantForAutofill="no"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/product_fabric" />

            <TextView
                android:id="@+id/product_amount"
                style="@style/product_fields"
                android:text="@string/product_amount"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/product_fabric_edit" />

            <EditText
                android:id="@+id/product_amount_edit"
                style="@style/fields_input_style"
                android:hint="@string/product_amount"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/product_amount" />

            <TextView
                android:id="@+id/button_cancel"
                style="@style/cancel_btn_style"
                android:text="@string/cancel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/product_amount_edit" />

            <Button
                android:id="@+id/addBtn"
                style="@style/add_btn_style"
                android:text="@string/add"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/product_amount_edit" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>